made the intro about combining selection and gwas

--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -77,23 +77,23 @@ The UK Biobank is a publicly available data set consisting of 500,000 individual
 
 ### Genetic associations for gout in Polynesian populations
 
-As has been previously mentioned (sections \@ref(goutMetSyn), \@ref(chap4Intro)), New Zealand Polynesians have a higher prevalence of gout and metabolic disease [@Winnard2013]. Of the 28 genetic variants associated with serum urate levels that have been previously reported in European populations, 17 also had significant associations with gout [@Kottgen2013]. In the Polynesian populations of New Zealand, nine have replicated the association with gout, with some Polynesian-specific effects being noted [@Phipps-Green2016]. The inherent higher prevalence of gout in Polynesian populations, combined with a lack of adequate sample sizes to perform \gls{gwas} with sufficient power to detect loci, other than the main effect loci of _ABCG2_ and _SLC2A9_, means that alternative approaches are needed to find additional evidence to reduce the number of potentially false negative results. Traditionally meta-analysis of \gls{gwas} has been used to boost statistical power, or trans-ancestral meta-analysis can be used to incorporate differring \gls{ld} patterns between ancestries when performing meta-analysis [@Morris2011].
+As has been previously mentioned (sections \@ref(goutMetSyn), \@ref(chap4Intro)), New Zealand Polynesians have a higher prevalence of gout and metabolic disease [@Winnard2013]. Of the 28 genetic variants associated with serum urate levels that have been previously reported in European populations, 17 also had significant associations with gout [@Kottgen2013]. In the Polynesian populations of New Zealand, nine have replicated the association with gout, with some Polynesian-specific effects being noted [@Phipps-Green2016]. The inherent higher prevalence of gout in Polynesian populations, combined with a lack of adequate sample sizes to perform \gls{gwas} with sufficient power to detect loci, other than the main effect loci of _ABCG2_ and _SLC2A9_, means that alternative approaches are needed to find additional evidence to reduce the number of potentially false negative results. Traditionally meta-analysis of \gls{gwas} has been used to boost statistical power, or trans-ancestral meta-analysis can be used to incorporate differing \gls{ld} patterns between ancestries when performing meta-analysis [@Morris2011].
 
 
 
 ### Use of selection statistics to inform GWAS
 
-\gls{gwas} in the last few years have required to have larger and larger cohorts, in a quest to discover the source of 'missing heritability' [@Visscher2012;@Yang2017]. The requirement for larger cohorts comes from the inverse relationship between effect-size and statistical power. The source of missing heritability is thought to be found in the polygenic effects of many small effect genetic variants and unmarked uncommon variants of stronger effect sizes [@Spencer2009]. \gls{gwas} also suffer from the need to control the false positive rate and as such have a stringent association significance threshold [@Fadista2016]. One of the side-effects of this threshold is that variants that have a true effect but due to cohort size do not reach statistical significance are lost in the 'noise' of the \gls{gwas} signal. 
+\gls{gwas} in the last few years have required to have larger and larger cohorts, in a quest to discover the source of 'missing heritability' [@Visscher2012;@Yang2017]. The requirement for larger cohorts comes from the inverse relationship between effect-size and statistical power. The source of missing heritability is thought to be found in the polygenic effects of many small effect genetic variants and unmarked uncommon variants of stronger effect sizes [@Spencer2009]. \gls{gwas} also suffer from the need to control the false positive rate and as such have a stringent association significance threshold [@Fadista2016]. One of the side-effects of this threshold is that variants that have a true effect but due to cohort size do not reach statistical significance are lost in the 'noise' of the \gls{gwas} signal. One of the possibilities to be able to identify such variants is to use a combination of of selection statistics with \gls{gwas} to prioritise \gls{gwas} results [@Ayodo2007, @Field2016a, @Casto2011].
 
->Selection reduces the genetic variation at a locus and increases the \gls{ld} between the selected variant and variants carried with it as part of the haplotype. This can increase the \gls{ld} between a causal variant  and with a tag \gls{snp}.
+<!-- >Selection reduces the genetic variation at a locus and increases the \gls{ld} between the selected variant and variants carried with it as part of the haplotype. This can increase the \gls{ld} between a causal variant  and with a tag \gls{snp}. -->
 
->One of the possibilities to be able to identify such variants is to use methodologies that capture the non-additive genetic variance and pair this with the \gls{gwas}. 
+<!-- >One of the possibilities to be able to identify such variants is to use methodologies that capture the non-additive genetic variance and pair this with the \gls{gwas}.  -->
 
-The use of selection statistics in combination with \gls{gwas} is one of these methodologies that can be applied to prioritise \gls{gwas} results [@Ayodo2007, @Field2016a, @Casto2011].
+<!-- The  -->
 
-> selections main operation is through additive effects - because mostly additive effects are transmitted through generations
+<!-- > selections main operation is through additive effects - because mostly additive effects are transmitted through generations -->
 
-In the case of gout, for which hypericaemia is a prerequisite, if loci under selection had been associated with urate could the selection signal be used to boost the association signal?
+<!-- In the case of gout, for which hypericaemia is a prerequisite, if loci under selection had been associated with urate could the selection signal be used to boost the association signal? -->
 
 ### Objectives
 
@@ -865,7 +865,7 @@ The different definitions of gout used in this study may represent the different
 
 Each of the gout definitions tested had genome-wide significance for \glspl{snp} associated with gout in _ABCG2_ and _SLC2A9_. These two genes encode proteins that transport urate in the gut (ABCG2) and proximal tubule of the kidney (SLC2A9). The large effect sizes in the association with gout, show similarity with their large effect sizes in the control of serum urate levels [@Kottgen2013].
 
-Heritability estimates for the variance attributed to the additive effects of common \glspl{snp} of 0.282-0.308 (excluding the hospital definition) were in line with those reported by @Kottgen2013, with the same approach using the GCTA software of 0.27 to 0.41 for serum urate levels. There was also no statistically significant differences between the heritability estimates for the different definitions. The comparability between the heritability estimates for gout and serum urate by common genetic variants suggests the genetic heritabilities of serum urate levels and gout is similar. However, also contributing to the risk of gout are environmental factors, such as diet and medications. Because the estimates are constructed under an additive model, it does not take into account the non-additive variance, such as gene-gene or gene-environment interactions, or the effect of structural variants such as copy number variation.
+Heritability estimates for the variance attributed to the additive effects of common \glspl{snp} of 0.282-0.308 (excluding the hospital definition) were in line with those reported by @Kottgen2013, with the same approach using the GCTA software of 0.27 to 0.41 for serum urate levels. There was also no statistically significant differences between the heritability estimates for the different definitions. The comparability between the heritability estimates for gout and serum urate by common genetic variants suggests the genetic heritabilities of serum urate levels and gout is similar. However, also contributing to the risk of gout are environmental factors, such as diet and medications. Because the estimates are constructed under an additive model, it does not account for the non-additive variance, such as gene-gene or gene-environment interactions, or the effect of structural variants such as copy number variation.
 
 
 
@@ -922,7 +922,7 @@ The _IBSP/PKD2/ABCG2_ region has been associated with both gout and urate levels
 ### Limitations
 
 In the analysis of the different gout definitions, there was a difference between the the definitions in the number of \glspl{snp} that had a significant association with gout, with the hospital diagnosis definition having the fewest. One of the key differences between the definitions was the number of cases defined for each, ranging from 382 to 2295, this will have impacted on the power for each \gls{gwas} to detect associations. 
-Similar to the \gls{gwas} results from the different gout definitions, the differences between heritability estimates of the different definitions may too be impacted by the differing numbers of cases. Due to computational reasons, only a subsample of the controls was used in the calculation of the heritability estimates. The use of all of the controls may have also changed the results of the heritability analysis. Another limitation of the definitions was the lack of 'gold standard' to which the definitions could be compared, and therefore sensitivity and specificity was unable to be calculated for each definition. The ancestry of the UK Biobank samples included for the gout definitions were European, this means that results and conclusions from the definition analysis may not be applicable to other ancestral backgrounds. 
+Similar to the \gls{gwas} results from the different gout definitions, the differences between heritability estimates of the different definitions may too be impacted by the differing numbers of cases. Due to computational reasons, only a sub-sample of the controls was used in the calculation of the heritability estimates. The use of all of the controls may have also changed the results of the heritability analysis. Another limitation of the definitions was the lack of 'gold standard' to which the definitions could be compared, and therefore sensitivity and specificity was unable to be calculated for each definition. The ancestry of the UK Biobank samples included for the gout definitions were European, this means that results and conclusions from the definition analysis may not be applicable to other ancestral backgrounds. 
 
 With the combination of the selection statistics with the results of the gout \gls{gwas} analyses, the variants that were able to be compared were limited by the selection analysis, where the selection results were only from the markers that were available on the CoreExome \gls{snp} array. This is despite the UK Biobank \gls{gwas} being conducted on an imputed dataset, where there were results for 9.3 million markers after filtering. This compared to the total number of 236,868 markers for which there were \gls{ihs} or \gls{nsl} results. It is possible that if there were \gls{ihs} and \gls{nsl} results for a greater number of markers, more loci may have been prioritised. The Polynesian \gls{gwas} was limited by sample size, and also in the number of markers for which there were both association and selection results.The marker density of the CoreExome \gls{snp} array could have been improved through imputation, however, for Polynesian populations, the public haplotype reference panels lack representation of Polynesian populations. This means that Polynesian specific variants (such as rs373863828, @Minster2016) and therefore haplotypes, are not incorporated in the imputation, and as a result the imputation accuracy suffers [@Howie2011]. 
 
