--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -44,6 +44,8 @@ This chapter investigates the idea that populations with shared ancestry will di
 * migration to NZ from pacific islands
 -->
 
+### Signatures of selection
+
 “Signatures of selection” in a population can be identified in regions of the genome that exhibit a reduction in genetic variability [@Smith1974;@Kaplan1989;@McVean2007]. This reduction in genetic variation can arise when the phenotype of a neutral benefit allele experiences a favourable change in environmental conditions, or a new allele arises conveying a selective advantage [@Hermisson2005]. This results in an increased frequency of both the allele, and linked sites, within a population [@Smith1974]. Genome-wide scans for signatures of selection have shown that  geographically similar populations share similar genetic signatures [@Coop2009; @pickrell2009signals]. Geography can inhibit migration, leading to local adaptations affecting the allele frequency of local populations, leaving the non-local population allele frequency unaffected [@Coop2009]. New Zealand Polynesians are relatively geographically isolated, with a recent settlement history, this means that any signatures of selection found, and not shared with other populations are likely to be a recent and localised adaptation. 
 
 <!-- need to update with Lisa's comments which were
@@ -53,6 +55,8 @@ This chapter investigates the idea that populations with shared ancestry will di
 - mention CIM settlement
 - explain east/west split
 -->
+
+### Settlement of Polynesia
 
 The history of Polynesian migration starts with migration out of Africa (50-100 kya, @Nielsen2017), tracking up to the Levant and Arabian peninsula (45-55 kya) and splitting into South Asia, Indonesia, and Australia (50kya, @Kivisild1999; @Quintana-Murci1999). Concurrently the migration  to Europe was occurring (45 kya). From South Asia the migration continued with the peopling of East Asia (20kya, @Groucutt2015). <!--Lisa: The Pacific – or if you really are talking about Remote Oceania, you are talking about Lapita, which first appears in Near Oceania about 3300BP where they interact with the peoples who have been there for at least 40,000 years and then by 3,000 they are the first to establish settlement on the islands of New Caledonia, Vanuatu, Fiji, Samoa and Tonga. THEN around 1-1.2 kya we have the settlement of the rest of the Polynesian triangle, including the Cook Is avout 1,000 BP and New Zealand about 750 - 800 BP. --> The Pacific was settled in two events, the first was the settlement of Near Oceania (40 kya), this was followed by the settlement of Remote Oceania, reaching Western Polynesia (Samoa and Tonga) during the Lapita expansion (3 kya, @Matisoo-Smith2015; @Skoglund2016). Eastern Polynesia (including the Cook Islands) was then settled (1–1.2 kya, @Wilmshurst2011). The final region of the Polynesian triangle to be settled was that of \gls{nz} by \gls{nz} M\tex{\={a}}ori, occurring 800 ya [@Duggan2014; @Matisoo-Smith2015]. It is from this migration history that modern Polynesian populations come to have a shared common ancestry with modern East Asian populations.
 
@@ -70,6 +74,7 @@ include paragraph about maori and pacific health in general in new zealand - don
 @Hawley2015 @moh
 
 -->
+### Health disparities in Polynesian populations
 
 New Zealand M\tex{\={a}}ori and Pacific Islanders in New Zealand over the past decade have been exhibiting a decrease in overall health [@MinistryofHealth2016]. Fruit and vegetable intake, and physical activity has also been reported as decreasing, all the while there has been an increase in obesity, which has an adjusted rate ratio of 1.7 for  M\tex{\={a}}ori versus non- M\tex{\={a}}ori, and 2.4 for Pacific versus non-Pacific [@MinistryofHealth2016]. The rate of increase in \gls{bmi} for Pacific Islanders was five times that of the rest of the world, and fasting plasma glucose was three to four times higher over the 1980-2008 period [@Hawley2015]. The health disparities are captured in the New Zealand statistics where M\tex{\={a}}ori have a mortality rate of 1.8  that of non-M\tex{\={a}}ori, with the rates of obesity and diabetes of particular note, with the M\tex{\={a}}ori standardised rate of 40.6 per 100,000, five times higher than non-M\tex{\={a}}ori of 8.1 per 100,000 [@MinistryofHealth2012].
 
@@ -138,38 +143,40 @@ Disease associated markers and their annotated genes were downloaded from the \g
 
 <!-- > need to explain why K = 6 for the rest of the analysis -->
 
-The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The admixture of the \gls{amr} populations was evident in \gls{pc} 1 with a large spread centered with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation.
+The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)).
+
+The admixture of the \gls{amr} populations [@1KGP2015snp] was evident in \gls{pc} 1 with a large spread centered with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation. There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data wasn't a major source of variability in the dataset. 
 
 (ref:allpopPCA) A) Principal components 1 and 2 for all populations. B) Principal components 1 and 3 for all populations. C) Principal components 1 and 4 for all populationsColoured by super population grouping.
 
-```{r allpopPCA, fig.cap = '(ref:allpopPCA)', echo = FALSE, fig.height = 7, fig.width=5, fig.align='center'}
+```{r allpopPCA, fig.cap = '(ref:allpopPCA)', echo = FALSE, fig.height = 6, fig.width=5, fig.align='center'}
 eigen <- read.table('~/data/NZ_coreExome_1kgp/PCA/indiv_pops/NZ_1KGP_allchr_indep_eigen.pca.evec', stringsAsFactors = FALSE)
 
 eigen <- eigen %>% select("sample" = V1, everything()) %>% left_join(., panel, by = 'sample') %>% filter(!pop %in% c('WPN','EPN','NAD'))
 names(eigen)[2:11] <- paste0("PC",1:10)
-pc12 <- eigen %>% ggplot(., aes(x = PC1, y = PC2, colour = super_pop)) + geom_point() + theme_bw() + guides(colour = guide_legend(title = "Super Population", ncol = 6, title.position = 'top')) + theme(legend.position = 'bottom', axis.text.x = element_blank(), axis.title.x = element_blank())
-pc13 <- eigen %>% ggplot(., aes(x = PC1, y = PC3, colour = super_pop)) + geom_point() + theme_bw() + theme(legend.position = 'none', axis.text.x = element_blank(), axis.title.x = element_blank())
-pc14 <- eigen %>% ggplot(., aes(x = PC1, y = PC4, colour = super_pop)) + geom_point() + theme_bw()+ theme(legend.position = 'none') + scale_y_continuous(breaks = c(-0.06, -0.04,-0.02, 0, 0.02, 0.04, 0.06))
+pc12 <- eigen %>% ggplot(., aes(x = PC1, y = PC2, colour = super_pop)) + geom_point(shape = 1,  alpha = 0.3) + theme_bw() + guides(colour = guide_legend(title = "Super Population", ncol = 6, title.position = 'top', override.aes = aes(alpha = 1, shape  = 16)), shape = guide_legend('none')) + theme(legend.position = 'bottom', axis.text.x = element_blank(), axis.title.x = element_blank(), axis.ticks.x = element_blank())
+pc13 <- eigen %>% ggplot(., aes(x = PC1, y = PC3, colour = super_pop)) + geom_point(shape = 1,  alpha = 0.3) + theme_bw() + theme(legend.position = 'none', axis.text.x = element_blank(), axis.title.x = element_blank(), axis.ticks.x = element_blank())
+pc14 <- eigen %>% ggplot(., aes(x = PC1, y = PC4, colour = super_pop)) + geom_point(shape = 1,  alpha = 0.3) + theme_bw()+ theme(legend.position = 'none') + scale_y_continuous(breaks = c(-0.06, -0.04,-0.02, 0, 0.02, 0.04, 0.06))
 leg <- cowplot::get_legend(pc12)
 top_row <- cowplot::plot_grid(pc12 + theme(legend.position = 'none'), pc13, pc14 , nrow = 3, labels = c("A","B", "C"), align = 'v', rel_heights = c(1,1,1.2))
 cowplot::plot_grid(top_row, leg, nrow=2, ncol = 1, rel_heights = c(1,.1))
 ```
 
-(ref:eurPCA) Principal components 1 and 2 for populations of the European Super Population.
+(ref:eurPCA) Principal components 1 and 2 for populations of the European super population.
 
 ```{r eurPCA, fig.cap = '(ref:eurPCA)', echo = FALSE, fig.width = 5, fig.height = 3}
 #eigen %>% filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, colour = pop)) + geom_point() + theme_bw() + guides(colour = guide_legend(title = "Population"))
 
-eigen %>% filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(EUR = '#00BFC4')) + guides(shape = guide_legend(title = "Population"), colour = guide_legend(title = "Super Population")) + scale_shape_manual(values = c(CEU = 0, NZC = 1, GBR = 2, IBS = 3, FIN = 4, TSI = 5))
+eigen %>% filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(EUR = '#00BFC4')) + guides(shape = guide_legend(title = "Population", override.aes = aes(colour= "#00BFC4")), colour = guide_legend("none")) + scale_shape_manual(values = c(CEU = 0, NZC = 1, GBR = 2, IBS = 3, FIN = 4, TSI = 5))
 ```
 
 (ref:polPCA) Principal components 2 and 6 for the Polynesian populations.
 
 ```{r polPCA, fig.cap = '(ref:polPCA)', echo = FALSE, fig.width = 5, fig.height= 3}
-eigen %>% filter(super_pop == 'POL') %>% ggplot(., aes(x = PC6, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(POL = '#619CFF')) + scale_shape_manual(values = c("CIM" = 0,"NZM" = 1, "TON" = 2, "SAM" = 3)) + guides(size = FALSE) + guides(shape = guide_legend(title = "Population"), colour = guide_legend(title = "Super Population"))
+eigen %>% filter(super_pop == 'POL') %>% ggplot(., aes(x = PC6, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(POL = '#619CFF')) + scale_shape_manual(values = c("CIM" = 0,"NZM" = 1, "TON" = 2, "SAM" = 3)) + guides(size = FALSE) + guides(shape = guide_legend(title = "Population", override.aes = aes(colour ='#619CFF' )), colour = guide_legend("none"))
 ```
 
-There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data wasn't a major source of variability in the dataset. In the combined dataset the Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)).
+
 
 
 \FloatBarrier
@@ -189,7 +196,7 @@ Admixture analysis is a method that can be used to infer the number of ancestral
 
 
 
-When the ancestral proportions for K = 11 were plotted for each individual for each population, there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations, \gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, but also showed that there were sub-groups within the super-populations.
+When the ancestral proportions for K = 11 were plotted for each individual for each population, there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations, \gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; Hellenthal2014], but also showed that there were sub-groups within the super-populations.
 
 
 
@@ -203,9 +210,9 @@ ref_fam <- left_join(ref_fam, panel %>% filter(!pop %in% c('NAD','EPN','WPN','PO
 ```
 
 
-(ref:admix) Proportions of ancestral populations as inferred from ADMIXTURE, using K = 11. Ancestral population (AP) represents a particular theoretical ancestral population.
+(ref:admix) Proportions of ancestral populations as inferred from ADMIXTURE, using K = 11. Ancestral population (AP) represents a particular theoretical ancestral population. Q is the ancestral proportion.
 
-```{r admix, echo = FALSE, fig.height = 9, fig.width = 6, fig.cap = '(ref:admix)'}
+```{r admix, echo = FALSE, fig.height = 8, fig.width = 6, fig.cap = '(ref:admix)'}
 # barplot of the reference proportions
 cols <- c('#a50026','#d73027','#f46d43','#fdae61','#fee090','#ffffbf','#e0f3f8','#abd9e9','#74add1','#4575b4','#313695')
 names(cols) <- paste0("AP", 1:11)
@@ -265,7 +272,7 @@ global_super_summary <- readRDS('~/data/NZ_coreExome_1kgp/100kbWindow_intra/filt
 (ref:multichrplot) _Whole Chromosome Clustering._ Hierarchical clustering of the populations using selection test statistics for each entire chromosome. Clustering was performed using Euclidean distance for the distance measure and complete linkage for the linkage criteria. Selection test statistic is in the label for each dendrogram. Coloured by super population.
 
 
-```{r multichrplot, fig.cap='(ref:multichrplot)', echo = FALSE, fig.height=8}
+```{r multichrplot, fig.cap='(ref:multichrplot)', echo = FALSE, fig.height=6}
 multiplot(gene_dendros(gene_data = mat_d_list[['td_chr']]) + ggtitle("Tajima's D"),
           gene_dendros(gene_data = mat_d_list[['fwh_chr']]) + ggtitle("Fay and Wu's H"),
           #gene_dendros(gene_data = mat_d_list[['fld_chr']]) + ggtitle("Fu and Li's D"),
@@ -967,7 +974,7 @@ sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_SAM
 
 ```
 
-A similar approach as with clustering of the frequency spectrum based statistics was used to investigate similarities in regions that had evidence of possible selection in the intra-population haplotypic based selection methods. To do this, the significant \gls{ihs} or \gls{nsl} results were clustered into regions, and the percentage of bases overlapping between populations was calculated in these regions. The proportion of shared regions, based on region overlap, was used to cluster populations, given the total region that was significant for a single population. This was to investigate if there was a commonality between populations in the haplotypic regions that had evidence for selection, the hypothesis being that populations in similar geographic regions would have had a similar environmental exposure, and therefore have similar regions of the genome under selective pressure.
+A similar approach as with clustering of the frequency spectrum based statistics was used to investigate similarities in regions that had evidence of possible selection in the intra-population haplotypic based selection methods. To do this, the significant \gls{ihs} or \gls{nsl} results were clustered into regions (Table \@ref(tab:hapclustab)), and the percentage of bases overlapping between populations was calculated in these regions. The proportion of shared regions, based on region overlap, was used to cluster populations, given the total region that was significant for a single population. This was to investigate if there was a commonality between populations in the haplotypic regions that had evidence for selection, the hypothesis being that populations in similar geographic regions would have had a similar environmental exposure, and therefore have similar regions of the genome under selective pressure.
 
 Clustering on the proportion of shared regions (see section \@ref(haplocluster)) for both \gls{ihs} (Figure \@ref(fig:ihsclust)) and \gls{nsl} (Figure \@ref(fig:nslclust)) grouped the individual populations into their super populations, with the exception of the \gls{amr} populations which were split into two separate groups. The order of populations differed due to each population having a different total for the size of region that was significant. Both \gls{ihs} and \gls{nsl} gave similar groupings and had similar proportions of selected regions shared.
 
@@ -1198,9 +1205,9 @@ n_disease_pol_metsyn <- NROW(GenomicRanges::reduce(IRanges::subsetByOverlaps(c(g
 ```
 
 
-In the clustered-significant regions of both \gls{ihs} and \gls{nsl} there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \glspl{snp} for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been associated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
+In the clustered-significant regions of both \gls{ihs} and \gls{nsl} (Table \@ref(tab:hapclustab)) there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \glspl{snp} for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been associated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
 
-> need to make table of these clustered regions
+
 
 ```{r, message=FALSE, warning=FALSE}
 shared_ihs_pol_disease_snps <- left_join(bind_rows(disease_ihs_snps) %>% filter(superpop == "POL") %>% select(seqnames, start, end) %>% distinct(), bind_rows(disease_ihs_snps), by =c("seqnames", "start","end")) %>% select(-genename, -width, -strand) %>% distinct() %>% group_by(seqnames, start, end) %>% mutate(n = n()) %>% filter(n > 1) %>% arrange(desc(n))
@@ -1526,6 +1533,21 @@ There were `r length(unique(gc_urate_gout_GR$SYMBOL))` loci that had an associat
 > what were the similarities at the loci like between populations? and were any loci that were significant also significant in other pops?
 
 > stating the significant windows seems a bit redundant considering the previous subsections for the extreme windows
+
+
+```{r, eval = FALSE}
+gout$mat_d$Tajima.D %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, td, -contains("chrom")) %>% left_join(., gout$mat_d$Tajima.D %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% gc_urate_gout_GR$SYMBOL)%>% ggplot(., aes(x = chrom_start, y = td, by = pop, colour = superpop)) + geom_point()+ facet_wrap(SYMBOL~chrom, scales = 'free_x') + geom_line()
+```
+
+```{r, eval = FALSE}
+gout$mat_d$Tajima.D %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, td, -contains("chrom")) %>% left_join(., gout$mat_d$Tajima.D %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% gc_urate_gout_GR$SYMBOL) %>% group_by(pop, SYMBOL) %>% summarise( min(td), median(td), max(td), mean = mean(td), sd(td)) %>% select(SYMBOL, pop, mean) %>% spread(SYMBOL, mean) %>% View()
+```
+
+```{r, eval =  FALSE}
+gout$mat_d$Tajima.D %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, td, -contains("chrom")) %>% left_join(., gout$mat_d$Tajima.D %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% gc_urate_gout_GR$SYMBOL)  %>% select(SYMBOL, pop, td) %>% mutate(superpop = str_sub(pop, 1, 3)) %>% ggplot(., aes(x = superpop, y = td, colour = superpop)) + geom_boxplot() + facet_wrap(~SYMBOL)
+```
+
+
 
 ```{r, eval = FALSE}
 lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally()  %>% spread(SYMBOL, n) %>% left_join(., panel %>% select(pop, super_pop) %>% distinct(), by = 'pop') %>% arrange(statname, super_pop, pop) %>% View()
@@ -2152,7 +2174,14 @@ perc_complete_no_amr <- bind_rows(
 <!-- need to get fld in the 100 -->
 ```{r}
 # add in fld 100 because it has no results, therefore wasn't in the original table
-poly_complete %>% full_join(., perc_complete %>% select(allcomplete = n, everything()), by = c('statname','gene_n')) %>% full_join(., perc_complete_no_amr %>% select(noAMR = n, everything()), by = c('statname','gene_n'))%>% mutate(allcomplete = ifelse(is.na(allcomplete),0,allcomplete), noAMR = ifelse(is.na(noAMR),0,noAMR)) %>% arrange(gene_n, statname)%>% select("Statistic" = statname, "Genes (n)" = gene_n, 'POL Complete (%)' = n, 'All Complete (%)' = allcomplete, 'All Complete excl. AMR (%)' = noAMR, everything()) %>% kable(., booktabs = TRUE, caption = '(\\#tab:randgenes) Percentage of draws from randomly selected genes for completely clustered super populations.', align = "lrrrr")
+poly_complete %>% full_join(., perc_complete %>% select(allcomplete = n, everything()), by = c('statname','gene_n')) %>% full_join(., perc_complete_no_amr %>% select(noAMR = n, everything()), by = c('statname','gene_n'))%>% mutate(allcomplete = ifelse(is.na(allcomplete),0,allcomplete), noAMR = ifelse(is.na(noAMR),0,noAMR)) %>% arrange(gene_n, statname)%>%
+  mutate(statname = case_when(statname == "Fay.Wu.H" ~ "Fay and Wu's H", 
+                              statname == "Tajima.D" ~ "Tajima's D", 
+                              statname == 'Fu.Li.F' ~ "Fu and Li's F",
+                              statname == 'Zeng.E' ~ "Zeng's E", 
+                              statname == 'ihs' ~ 'iHS', 
+                              statname == 'nsl'~"nSL")) %>% 
+  select("Statistic" = statname, "Genes (n)" = gene_n, 'POL Complete (%)' = n, 'All Complete (%)' = allcomplete, 'All Complete excl. AMR (%)' = noAMR, everything()) %>% kable(., booktabs = TRUE, caption = '(\\#tab:randgenes) Percentage of draws from randomly selected genes for completely clustered super populations.', align = "lrrrr", linesep = "")
 ```
 
 
